step 2 for this week's content; used Fetch()

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,10 +7,10 @@
 	<script src="https://kit.fontawesome.com/b88b060ca1.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body id="home">
+<body id="home" onload="getGreeting()">
 	<!-- Navbar -->
 	<nav id="navigation-bar">
-		<h2><a href="#home"><span class="text-primary">Deus</span> Nsenga</a></h2>
+		<h2><a href="#home"><span class="text-primary" id="greeting-placehold"></span> Nsenga</a></h2>
 		<ul>
 			<li><a href="#home">Home</a></li>
 			<li><a href="#about">About</a></li>
