step3 of this week's material

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,15 +7,16 @@
 	<script src="https://kit.fontawesome.com/b88b060ca1.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body id="home" onload="getGreeting()">
+<body id="home" onload="getComments()">
 	<!-- Navbar -->
 	<nav id="navigation-bar">
-		<h2><a href="#home"><span class="text-primary" id="greeting-placehold"></span> Nsenga</a></h2>
+		<h2><a href="#home"><span class="text-primary" id="greeting-placeholder">Deus </span> Nsenga</a></h2>
 		<ul>
 			<li><a href="#home">Home</a></li>
 			<li><a href="#about">About</a></li>
 			<li><a href="#experience">Experience</a></li>
 			<li><a href="#gallery">Gallery</a></li>
+            <li><a href="#comments">Comments</a></li>
 			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</nav>
@@ -152,6 +153,12 @@
 			</div>	
 		</div>
 	</section>
+    <!-- Section: Comments -->
+    <section id="comments" class="bg-light">
+        <div class="container">
+           <h2> <span class="text-primary" id="comments-placeholder"></span> </h2>
+        </div>
+    </section>
 	<!-- Section: Contact -->
 	<section id="contact" class="bg-light">
 		<div class="container">
