step5 of this week's material

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -161,7 +161,10 @@
             </ul>
            <br/><br/>
            <form action="/data" method="POST">
-                <p>Enter a comment: </p>
+                <p>Enter your name: </p>
+                <textarea name="name-input"></textarea>
+                <br/><br/>
+                <p>Enter your comment: </p>
                 <textarea name="comment-input"></textarea>
                 <br/><br/>
                 <input type="submit" />
