--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -162,26 +162,13 @@
                     </ul>
                 </span> 
             </h2>
-            <form action="/delete-data" method="POST">
-                <input type="submit" name="delete-comments" value="Delete Comments" />
-            </form>
-           <br/><br/>
            <form action="/data" method="POST">
                <p>Please Enter how many comments you wish to view (max=20).</p>
                <input type="number" name="number-of-comments" id='comments-num' min="1" max="20" value="5">
                <input type="submit" />
            </form>
-           <br></br>
-           <form action="/data" method="POST">
-                <p>Enter your name: </p>
-                <textarea name="name-input"></textarea>
-                <br/><br/>
-                <p>Enter your comment: </p>
-                <textarea name="comment-input" pattern="[A-Za-z0-9]{1,20}"></textarea>
-                <br/><br/>
-                <input type="submit" />
-           </form>
-           <br/><br/>
+           <div id="log-in-out">
+            </div>
         </div>
     </section>
 	<!-- Section: Contact -->
